--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_URL=http://laravel-starter.local
 
 INITIAL_USERNAME=100000
 
-USER_REGISTRATION=true
+USER_REGISTRATION=false
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
